<resources>
    <string name="app_name">Bfsut</string>
    <string name="title_home">Главная</string>
    <string name="title_auth">Авторизация</string>
    <string name="title_log">Журнал</string>
    <string name="title_credits">Кредиты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_bar_status_text">Загрузка...</string>
    <string name="title_splash">"приветсвие "</string>
    <string name="welcome">Добро \nпожаловать!</string>
    <string name="enter">Войти</string>
    <string name="create_password">Нет пароля? Создать</string>
    <string name="userFriendly_errorMessage">Что-то пошло не так</string>
    <string name="fetch_milk">Сбор молока</string>
    <string name="credit_request">Заявка на кредит</string>
    <string name="new_farmer">Новый фермер</string>
    <string name="send">Отправить</string>
    <string name="search">Поиск</string>
    <string name="select">Выбрать</string>
    <string name="change_password">Изменить пароль</string>
    <string name="need_to_check">Нужно обойти:</string>
    <string name="show_more">Показать еще</string>
    <string name="my_farmer">Мои фермеры</string>
    <string name="milk_collection">Сборы молока</string>
    <string name="choose_logs">Выберите записи сбора молока</string>
    <string name="make_calculate">Произвести расчет</string>
    <string name="total">Итого:</string>
    <string name="calculate">Рассчитать</string>
    <string name="accept">Принять</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="create">Создать</string>
    <string name="job">Работа</string>
    <string name="education">Образование</string>
    <string name="family_status">Семейный статус</string>
    <string name="fact_location">Фактический адрес проживание</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="fact_location_question">Фактически адрес фермера является таким же?</string>
    <string name="location_on_doc">Адрес проживания по прописке</string>
    <string name="passport_data">Паспортные данные</string>
    <string name="sex">Пол</string>
    <string name="personal_data">Личные данные</string>
    <string name="change_price_content">При изменении текущей цены молока, в записях сделанных ранее, цены останутся прежними</string>
    <string name="change_price_title">Изменить цену на молоко</string>
    <string name="fill_milk_price">Укажите цену молока\nна сегодня</string>
    <string name="milk_history">История сбора молока</string>
    <string name="old_price_or_new">Укажите цену молока
на сегодня или оставьте предыдущую стоимость</string>
    <string name="check_or_create">Перед созданием фермера проверьте его наличие в базе. Так вы сэкономите время на заполнение данных</string>
    <string name="need_to_create">В системе не найдено,\nвам нужно создать фермера </string>
    <string name="farmer_not_found">Пользователя с таким ФИО не найдено. Свяжитесь со своим СПФ</string>
    <string name="fill_the_field">Заполните полe</string>
    <string name="credit_farmer_not_found">Пользователя с таким ФИО не найдено. Свяжитесь
со своим СПФ</string>
    <string name="filter_journal">Отчет сбора молока:</string>
    <string name="date">Дате</string>
    <string name="living_location">Место проживания</string>
    <string name="family">Семья</string>
    <string name="edit_farmer">Редактирование фермера</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="return_to_home">Вернуться на главную</string>
    <string name="credit_status_all">Все</string>
    <string name="credit_status_green">Ура! Заявка Асанова Кабылбека была одобрена, он сможет получить 60000 сом. Свяжитесь с нашими специалистами</string>
    <string name="credit_status_red">К сожалению заявка Дайыра Ахматова на 900000 сом была отклонена.</string>
    <string name="overdue_days">Просрочено дней</string>
    <string name="edit">Изменить</string>
    <string name="cancel">Отменить</string>
    <string name="understand">Понятно</string>
    <string name="find_by_name_or_tax">Найти фермера по ФИО или ИНН</string>
    <string name="milk_accept">Молоко принято</string>
    <string name="thank_for_job">Спасибо за работа</string>
    <string name="total_som">Итого: %1$ сом</string>
    <string name="make_calculate_for">Произвести расчет за %1$d литров</string>
    <string name="issued_info">%1$s - %2$s\nПогашение каждое %3$d число\n%4$d с/мес</string>
    <string name="total_default_som">Итого: 0 сом</string>
    <string name="question_edit_log">Хотите отредактировать
запись?</string>
    <string name="evening">вечером</string>
    <string name="morning">утром</string>
    <string name="all_logs_paid">Все записи рассчитаны</string>
    <string name="default_liters">0л</string>
    <string name="milked_today">Сбор молока \nза сегодня</string>
    <string name="default_som">0 сом</string>
    <string name="information">Информация</string>
    <string name="graphic">График</string>
    <string name="select_all">Выбрать все</string>
    <string name="or_choose_range">Или выбрать период</string>
    <string name="accepted">Применить</string>
    <string name="fetched">Собрано:</string>
    <string name="active">активный</string>
    <string name="milking_log">Запись сбора молока</string>
    <string name="actual_address">Адрес проживания по прописке</string>
    <string name="fetched_today">За сегодня уже собрано:</string>
    <string name="edit_log">Редактировать запись</string>
    <string name="default_calendar_hint">ДД.ММ.ГГГГГ</string>
    <string name="familty">Семья</string>
    <string name="static_per_month">Статистика за %1$d месяцев</string>
    <string name="default_liters_price">0 сом \nза литр</string>
    <string name="credit_potential">Кредитный потенциал</string>
    <string name="rating">Рейтинг</string>
    <string name="default_days">0 дней</string>
    <string name="credits_filter">Фильтр по кредитам</string>
    <string name="log_filter">Отчет сбора молока</string>
    <string name="choose_period">Выберите период</string>
    <string name="correct">Подвердить</string>
    <string name="unselect_all">Сбросить все</string>
    <string name="default_credit">0 кредитов</string>
    <string name="change_some">Внесите изменения</string>
    <string name="morning_milk_helper">После 11:00 нельзя вносить за утро</string>
    <string name="evening_milk_helper">До 11:00 нельзя вносить за вечер</string>
</resources>