<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margins"
    tools:context=".ui.main.home.ChangePriceBottomSheetFragment">

    <LinearLayout
        android:id="@+id/fields_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margins"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_gravity="center"
            android:background="@drawable/bg_handler_shape"
            android:layout_width="56dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_price_title"
            android:layout_marginTop="@dimen/default_margins"
            android:textColor="@color/text_bold_color"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/change_price_content"
            android:textColor="@color/gray_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margins"
            android:textStyle="bold"
            android:text="Текущая цена: 100 сом за литр"
            android:textColor="@color/text_bold_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/price_et"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_shape_black"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="number"
            android:textSize="21sp"
            tools:hint="100 сом" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="@dimen/default_margins"
        android:layout_marginTop="86dp"
        android:background="@drawable/selector_default_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/fields_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:elevation="0dp"
        android:layout_height="66dp"
        android:layout_marginHorizontal="@dimen/default_margins"
        android:stateListAnimator="@null"
        android:layout_marginVertical="@dimen/default_margins"
        android:background="@drawable/bg_rounded_shape_darker"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/text_bold_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>