<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:src="@drawable/bg_auth_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/welcome"
        android:textColor="@color/text_bold_color"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title">

        <pro.breez.bfsut.custom.view.RegistrationEditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="Заполните поля"
            app:hint="Ваш логин"
            app:title="Логин" />

        <pro.breez.bfsut.custom.view.RegistrationEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:error="Заполните поля"
            app:hint="Ваш пароль"
            app:is_password="true"
            app:title="Пароль" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_btn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_base_button"
        android:text="@string/enter"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/create_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_secondery_button"
        android:text="@string/create_password"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>