<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add_milk.MilkAddFragment">

    <pro.breez.bfsut.custom.view.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarLabel="Сбор молока" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margins"
        android:lineSpacingExtra="5sp"
        android:paddingHorizontal="@dimen/default_margins"
        android:paddingBottom="@dimen/default_margins"
        android:text="@string/milked_today"
        android:textColor="@color/text_bold_color"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <pro.breez.bfsut.custom.view.CustomDropDownEditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        app:hint="Найдите фермера"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:title="ФИО"
        app:type="drop" />

    <LinearLayout
        android:id="@+id/fields_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_margins"
        app:layout_constraintTop_toBottomOf="@id/name_et">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/day_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margins"
            android:background="@drawable/bg_rounded_shape_darker"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/name_tv">

            <TextView
                android:id="@+id/morning_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margins"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/morning"
                android:textColor="@color/text_bold_color"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/morning_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margins"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="start"
                android:hint="@string/default_liters"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="@color/text_bold_color"
                android:textColorHint="@color/gray_text"
                android:textSize="61sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/morning_title_tv"
                tools:text="4л" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/morning_helper_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="@dimen/default_margins"
            android:text="@string/fill_the_field"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/evening_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margins"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/bg_rounded_shape_darker"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/name_tv">

            <TextView
                android:id="@+id/evening_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margins"
                android:layout_marginTop="8dp"
                android:text="@string/evening"
                android:textColor="@color/text_bold_color"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/evening_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margins"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="start"
                android:hint="@string/default_liters"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="@color/text_bold_color"
                android:textColorHint="@color/gray_text"
                android:textSize="61sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/evening_title_tv"
                tools:text="4л" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/evening_helper_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="@dimen/default_margins"
            android:text="@string/fill_the_field"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border"
            tools:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/milk_price_container_morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginTop="@dimen/default_margins"
        android:background="@drawable/bg_price_of_liter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fields_container">

        <ImageView
            android:id="@+id/milk_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_milk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/milk_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margins"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/default_margins"
            android:text="@string/default_liters_price"
            android:textColor="@color/dark_blue"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/milk_img"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/total_sum_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margins"
        android:layout_marginBottom="@dimen/default_margins"
        android:paddingHorizontal="@dimen/default_margins"
        android:text="@string/total_default_som"
        android:textColor="@color/text_bold_color"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/create_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margins"
        android:background="@drawable/selector_default_button"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>