<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margins">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="426dp"

        android:layout_marginBottom="8dp"
        app:cardCornerRadius="@dimen/default_margins"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <pro.breez.bfsut.custom.view.DebounceEditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:hint="@string/search"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:padding="@dimen/default_margins"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C7CCD8"
                app:layout_constraintTop_toBottomOf="@id/search" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margins"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search"
                tools:itemCount="6"
                tools:listitem="@layout/item_selector"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/not_found_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/default_margins"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_preview" />

                <TextView
                    android:id="@+id/helper_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margins"
                    android:gravity="center"
                    android:text="@string/check_or_create"
                    android:textColor="@color/text_bold_color"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/home_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margins"
                    android:background="@drawable/bg_shape_light_gray_corners"
                    android:padding="8dp"
                    android:text="@string/return_to_home"
                    android:textSize="16sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_default_button"
        android:enabled="false"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />


</androidx.constraintlayout.widget.ConstraintLayout>